test/samples/invalid/tc/fun_call_args.maruir
fun add(a: u8, b: u8): u8
locals res: u8;
{
    entry:
        res := a + b;
        return res;
}


fun main()
locals a: u8, b: i16, c: i32;
{
    entry:
    a := call add(u16(1), u8(2));
    return;
}
